# otel-py

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
lib/: tracing.py
