[tool.poetry]
name = "otel-py"
version = "0.1.0"
description = ""
authors = ["thaddeuscleo <thaddeuscleo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"

[tool.black]
skip-string-normalization = true
line-length = 90

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = ["E501"]
line-length = 90
select = [
    "E",
    "F",
    "W",
    "I001",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
